<?xml version="1.0" encoding="utf-8"?><!--
  ~ The MIT License (MIT)
  ~
  ~ Copyright (c) 2015 Sven Dubbeld
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of
  ~ this software and associated documentation files (the "Software"), to deal in
  ~ the Software without restriction, including without limitation the rights to
  ~ use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
  ~ the Software, and to permit persons to whom the Software is furnished to do so,
  ~ subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
  ~ FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
  ~ COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
  ~ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
  ~ CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  -->

<resources>
    <string name="accessibility_service">Adds custom voice actions to Google Now</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="always">Always</string>
    <string name="app_name">Dashboard</string>
    <string name="automatic">Auto</string>
    <string name="built_in">Built-in</string>
    <string name="cancel">Cancel</string>
    <string name="cars_empty">No cars yet</string>
    <string name="default_app">Default</string>
    <string name="delete">Delete</string>
    <string name="dialer_input">Name or phone number</string>
    <string name="dialog_bluetooth_connecting">Connecting…</string>
    <string name="dialog_bluetooth_disconnected_choose_device">Select device</string>
    <string name="dialog_bluetooth_disconnected_disconnect">Close</string>
    <string name="dialog_bluetooth_disconnected_reconnect">Reconnect</string>
    <string name="dialog_bluetooth_disconnected_title">Connection could not be established</string>
    <string name="dialog_bluetooth_required_message">Bluetooth is required for vehicle status</string>
    <string name="dialog_new_car_message">Would you like to add a new car with VIN %s?</string>
    <string name="dialog_new_car_negative">@string/no_polite</string>
    <string name="dialog_new_car_positive">@string/okay</string>
    <string name="dialog_new_car_title">New car detected</string>
    <string name="dialog_notification_access_message">Please enable Notification Access to use media controls or spoken notifications</string>
    <string name="dialog_notification_access_negative">@string/no_polite</string>
    <string name="dialog_notification_access_positive">@string/yes_enthusiastic</string>
    <string name="dialog_notification_access_title">No Notification Access</string>
    <string name="dialog_voice_assist_not_found_message">A compatible voice assistant, like Google, is required to use this function</string>
    <string name="dialog_voice_assist_not_found_title">Voice assistant not found</string>
    <string name="edit">Edit</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="media_idle">No media playing</string>
    <string name="media_up_next">Up next:</string>
    <string name="medium">Medium</string>
    <string name="name">Name</string>
    <string name="navigate">Navigate</string>
    <string name="navigation_favorites">Favorites</string>
    <string name="navigation_favorites_empty">No favorites set</string>
    <string name="navigation_input">Destination</string>
    <string name="never">Never</string>
    <string name="no">No</string>
    <string name="no_polite">No, thanks</string>
    <string name="okay">Okay</string>
    <string name="play_store">Play Store</string>
    <string name="pref_summary_show_road">Requires an active data connection</string>
    <string name="pref_summary_speak_notifications_off">"Don't read notifications out loud when car mode is on"</string>
    <string name="pref_summary_speak_notifications_on">Read notifications out loud when car mode is on</string>
    <string name="pref_title_about">About</string>
    <string name="pref_title_apps">Apps</string>
    <string name="pref_title_bg">Background</string>
    <string name="pref_title_car">Car</string>
    <string name="pref_title_car_manage">Manage cars</string>
    <string name="pref_title_colors">Colors</string>
    <string name="pref_title_dialer">Dialer</string>
    <string name="pref_title_keep_screen_on">Keep screen on</string>
    <string name="pref_title_launcher">Home launcher</string>
    <string name="pref_title_licenses">Licenses</string>
    <string name="pref_title_navigation">Navigation</string>
    <string name="pref_title_navigation_favorites">Favorites</string>
    <string name="pref_title_navigation_home">Home</string>
    <string name="pref_title_navigation_work">Work</string>
    <string name="pref_title_night_mode">Night mode</string>
    <string name="pref_title_other">Other</string>
    <string name="pref_title_show_date">Date and time</string>
    <string name="pref_title_show_items">Show items</string>
    <string name="pref_title_show_media">Media controls</string>
    <string name="pref_title_show_road">Current road</string>
    <string name="pref_title_show_speed">Speed</string>
    <string name="pref_title_speak_notifications">Spoken notifications</string>
    <string name="pref_title_speak_notifications_volume">Spoken notifications volume</string>
    <string name="pref_title_unit_speed">Speed</string>
    <string name="pref_title_unit_temp">Temperature</string>
    <string name="pref_title_units">Units</string>
    <string name="pref_title_version">Version</string>
    <string name="search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="transition_button_dialer" translatable="false">transition_button_dialer</string>
    <string name="transition_button_navigation" translatable="false">transition_button_navigation</string>
    <string name="transition_media_album" translatable="false">transition_media_album</string>
    <string name="transition_media_art" translatable="false">transition_media_art</string>
    <string name="transition_media_artist" translatable="false">transition_media_artist</string>
    <string name="transition_media_container" translatable="false">transition_media_container</string>
    <string name="transition_media_next" translatable="false">transition_media_next</string>
    <string name="transition_media_play" translatable="false">transition_media_play</string>
    <string name="transition_media_play_progress" translatable="false">transition_media_play_progress</string>
    <string name="transition_media_prev" translatable="false">transition_media_prev</string>
    <string name="transition_media_title" translatable="false">transition_media_title</string>
    <string name="transition_media_vol_down" translatable="false">transition_media_vol_down</string>
    <string name="transition_media_vol_up" translatable="false">transition_media_vol_up</string>
    <string name="tutorial_text">Tap to open the OBD II view. This requires a compatible OBD II bluetooth adapter for your car.</string>
    <string name="tutorial_title">OBD II</string>
    <string name="yes">Yes</string>
    <string name="yes_enthusiastic">Make it so!</string>
</resources>
